# SimpleVRInjector

./: .gitignore
SimpleVRInjector/: CMakeLists.txt  README.md
SimpleVRInjector/src/Common/: Shared.h
SimpleVRInjector/src/Hook/VR/: OpenXRManager.h
src/Hook/: CMakeLists.txt  dllmain.cpp
src/Hook/DX11/: DX11Hook.cpp  DX11Hook.h
src/Hook/VR/: OpenXRManager.cpp
src/Launcher/: CMakeLists.txt  Main.cpp
src/Shaders/: StereoReprojection.hlsl
tests/: CMakeLists.txt  DummyDX11App.cpp
